# tudocomp

./: .gitignore  .gitmodules  CMakeLists.txt  debug.sh  test_med.txt
etc/: registry_config.py
etc/registries/: all_algorithms.py
examples/: CMakeLists.txt
include/tudocomp/: Env.hpp  version.hpp
include/tudocomp/compressors/: ModifiedRunLengthCompressor.hpp  ModifiedRunLengthEncoder.hpp  VerticalRunLengthCompressor.hpp
src/: CMakeLists.txt
src/tudocomp/: CMakeLists.txt
src/tudocomp_driver/: main  main.cpp
src/tudocomp_stat/: CMakeLists.txt
test/: CMakeLists.txt  tudocomp_driver_tests.cpp
